# cognitive-synergy-architecture

./: .gitignore  PROPOSAL.md  README.md  pyproject.toml
docs/: DEVELOPMENT.md
examples/: basic_usage.py
src/csa/: __init__.py  architecture.py
src/csa/attention/: __init__.py
src/csa/knowledge_graph/: __init__.py
src/csa/learning/: __init__.py
tests/: test_algorithms.py  test_basic.py
