[project]
name = "cognitive-synergy-architecture"
version = "0.1.0"
description = "A neuro-symbolic framework for advanced AI memory and reasoning"
authors = [
    {name = "Ty", email = "angrysky56@github"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}

keywords = [
    "ai", "memory", "reasoning", "knowledge-graph", 
    "neuroscience", "cognitive-architecture", "PSL"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "neo4j>=5.26.0",
    "neo4j-graphrag>=0.1.0",
    "torch>=2.5.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "networkx>=3.4.0",
    "pydantic>=2.10.0",
    "rich>=13.9.0",
    "typer>=0.15.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "ipython>=8.29.0",
    "jupyter>=1.1.0",
]

psl = [
    "pslpython>=2.3.0",
]

embeddings = [
    "sentence-transformers>=3.3.0",
    "transformers>=4.46.0",
]

visualization = [
    "matplotlib>=3.9.0",
    "plotly>=5.24.0",
    "pyvis>=0.3.2",
]

all = [
    "cognitive-synergy-architecture[dev,psl,embeddings,visualization]",
]

[project.urls]
Homepage = "https://github.com/angrysky56/cognitive-synergy-architecture"
Documentation = "https://github.com/angrysky56/cognitive-synergy-architecture/docs"
Repository = "https://github.com/angrysky56/cognitive-synergy-architecture"

[project.scripts]
csa = "csa.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/csa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=csa",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "neo4j.*",
    "torch.*",
    "networkx.*",
]
ignore_missing_imports = true
